# mangrove

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  biome.json  buf.gen.files-es.yaml  buf.gen.files.yaml  buf.gen.query.yaml  buf.gen.sharing.yaml  buf.gen.yaml  buf.yaml  bunfig.toml  docs-agent-cli-design.md  handover-stage5-filter-pushdown.md  handover-storage-access-proxy.md  justfile  package-lock.json  package.json  proto-gen.yaml  release-plz.toml  trestle.sharing.yaml  trestle.yaml
crates/acceptance/: API_COMPATIBILITY.md  Cargo.toml  JOURNEY_CATALOG.md  README.md
crates/acceptance/src/: conformance.rs  context.rs  lib.rs
crates/acceptance/src/checks/: agents.rs  catalog.rs  credential.rs  cross.rs  function.rs  governance.rs  managed_delta.rs  mod.rs  registered_model.rs  sharing.rs  table.rs  temp_creds.rs  volume.rs
crates/acceptance/src/execution/: mod.rs
crates/acceptance/src/journeys/tier1/: catalog_hierarchy.rs  catalog_simple.rs  metric_view_lifecycle.rs  table_managed_lifecycle.rs
crates/acceptance/src/journeys/tier2/: table_external_lifecycle.rs  (+1 more)
crates/acceptance/tests/: conformance.rs
crates/cli/: Cargo.toml  Dockerfile
crates/cli/src/: client.rs  error.rs  main.rs  render.rs
crates/client/: CHANGELOG.md  Cargo.toml  README.md
crates/client/src/: delta_v1.rs  error.rs  lib.rs  temporary_credentials.rs
crates/client/src/codegen/: client.rs  mod.rs
crates/common/: CHANGELOG.md  Cargo.toml  README.md  buf.gen.yaml  justfile
crates/common/src/: error.rs  lib.rs  store.rs
crates/common/src/metric_view/: deps.rs  detect.rs
crates/common/src/models/: functions_ext.rs  mod.rs  object.rs
crates/common/src/services/: commit_coordinator.rs  encryption.rs
crates/datafusion/: Cargo.toml
crates/datafusion/examples/: managed_table_write.rs  seed_managed_tables.rs
crates/datafusion/src/: lib.rs
crates/datafusion/src/catalog/: builder.rs  kernel.rs  provider.rs
crates/datafusion/src/log_explorer/: mod.rs  raw.rs  reconciled.rs
crates/datafusion/src/managed/: append.rs  committer.rs  create.rs
crates/datafusion/src/metric_view/: measure.rs  provider.rs
crates/datafusion/tests/: log_explorer.rs  managed_table.rs
crates/delta-api/: CHANGELOG.md  Cargo.toml  README.md
crates/delta-api/src/: authz.rs  backend.rs  column.rs  config.rs  contract.rs  coordinator.rs  error.rs  handler.rs  lib.rs  models.rs  router.rs  testing.rs
crates/delta-api/tests/: authz.rs  handler.rs  router.rs
crates/object-store/: CHANGELOG.md  Cargo.toml  README.md
crates/object-store/src/: credential.rs  lib.rs
crates/postgres/: CHANGELOG.md  Cargo.toml  justfile
crates/postgres/migrations/: 0101_delta_commits.sql  09_policy.down.sql  09_policy.up.sql
crates/postgres/src/: commit_coordinator.rs  error.rs  lib.rs
crates/postgres/src/graph/: mod.rs  store.rs
crates/postgres/tests/: commit_coordinator.rs
crates/query-wasm/: Cargo.toml
crates/query-wasm/.cargo/: config.toml
crates/query-wasm/delta-df-provider/: Cargo.toml
crates/query-wasm/delta-df-provider/src/: lib.rs  provider.rs  snapshot_build.rs  testing.rs
crates/query-wasm/delta-df-provider/tests/: m0_ssa_compile.rs  m1_ssa_scan_native.rs  m2_snapshot_pm_native.rs  m2_wasm.rs
crates/query-wasm/src/: bindings.rs  catalog.rs  creds.rs  engine.rs  error.rs  fetch_store.rs  lib.rs  log_udtf.rs  resolve.rs  uc.rs
crates/query-wasm/src/files/: engine.rs  lister.rs  mod.rs  page.rs  path.rs  service.rs
crates/query-wasm/tests/: native.rs
crates/server/: CHANGELOG.md  Cargo.toml  README.md
crates/server/openapi/: openapi.yaml
crates/server/src/: cli.rs  config.rs  error.rs  hybrid.rs  lib.rs  main.rs  memory.rs  run.rs  store.rs
crates/server/src/api/: agent_skills.rs  agents.rs  catalogs.rs  commits.rs  credentials.rs  delta.rs  entity_tag_assignments.rs  external_locations.rs  functions.rs  mod.rs  model_versions.rs  policies.rs  providers.rs  recipients.rs  registered_models.rs  schemas.rs  shares.rs  staging_tables.rs  tables.rs  tag_policies.rs  temporary_credentials.rs  volumes.rs
crates/server/src/codegen/: mod.rs
crates/server/src/handlers/: mod.rs
crates/server/src/policy/: mod.rs
crates/server/src/rest/: validation.rs
crates/server/src/services/: credential_vending.rs  delta_backend.rs  location.rs  managed_delta_contract.rs  mod.rs  object_store.rs  session.rs  sharing.rs  sharing_backend.rs
crates/server/tests/: credential_vending_azurite.rs
crates/sharing-api/: Cargo.toml  README.md
crates/sharing-api/src/: backend.rs  error.rs  handler.rs  kernel.rs  lib.rs  router.rs  session.rs  testing.rs
crates/sharing-api/tests/: handler.rs  router.rs
crates/sharing-client/: Cargo.toml
crates/sharing-client/src/: client.rs  lib.rs  query_extractors.rs
crates/sharing-client/src/models/: mod.rs
crates/sqlite/: CHANGELOG.md  Cargo.toml
crates/sqlite/migrations/: 0100_secrets.sql
crates/sqlite/src/: commit_coordinator.rs  error.rs  lib.rs  store.rs
crates/sqlite/tests/: commit_coordinator.rs  store.rs
dev/: compose.yaml  (+6 more)
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs  registered_models.rs  tag_policies.rs
node/client/: Cargo.toml  biome.json  buf.gen.yaml  justfile  package.json  tsconfig.json
node/client/src/codegen/: agent_skills.rs  agents.rs  catalogs.rs  credentials.rs  external_locations.rs  functions.rs  mod.rs  policies.rs  providers.rs  recipients.rs  registered_models.rs  schemas.rs  shares.rs  staging_tables.rs  tables.rs  tag_policies.rs  volumes.rs
node/client/unitycatalog/: index.ts
node/client/unitycatalog/codegen/: client.ts  native.d.ts  native.js
python/client/: Cargo.toml  _client_supplement.pyi
python/client/python/unitycatalog_client/: __init__.py  _client.pyi
python/client/src/: client.rs  lib.rs  runtime.rs
python/client/src/codegen/: agent_skills.rs  agents.rs  catalogs.rs  credentials.rs  external_locations.rs  functions.rs  mod.rs  policies.rs  providers.rs  recipients.rs  registered_models.rs  schemas.rs  shares.rs  staging_tables.rs  tables.rs  tag_policies.rs  volumes.rs
(+470 files in other folders)
