[workspace]
resolver = "2"
members = ["crates/*", "python/client", "node/client", "examples/rust"]
# The wasm query engine is its own workspace: its dependency graph patches the
# arrow family (dropping C-backed parquet codecs) via [patch.crates-io], which
# is workspace-global and must not leak into the native server build. See
# crates/query-wasm/Cargo.toml.
exclude = ["crates/query-wasm"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/open-lakehouse/mangrove"
readme = "README.md"
# Floor set by the dependency tree: buoyant_kernel requires rustc 1.91
# (datafusion 53 / darling 0.23 need 1.88). Keep CI's toolchain pin >= this.
rust-version = "1.91"
# Crates are versioned independently in each crate's own `[package].version`
# (the release-plz convention), so there is intentionally no workspace-wide
# `version` here.
homepage = "https://unitycatalog.io"
keywords = [
  "unitycatalog",
  "deltalake",
  "lakehouse",
  "delta-sharing",
  "governance",
]

[workspace.dependencies]
# Kernel and delta-rs core share one git source so the `Snapshot` types unify when
# `crates/datafusion` builds a catalog-managed kernel snapshot and hands it to
# `deltalake-core::kernel::Snapshot::new`. All three are pinned here at the
# workspace level by immutable `rev` (never a floating branch): a moving branch
# drifts on any CI job that re-resolves instead of `--locked` (napi build,
# `cargo llvm-cov --doc`), which is exactly how the old `buoyant/main` pin broke.
#
# The native server and the wasm preview engine (`crates/query-wasm`, its own
# workspace) share ONE kernel fork: roeap `delta_kernel` v0.25.0. The default
# engine (`DefaultEngineBuilder`) moved into its own `delta_kernel_default_engine`
# crate in v0.25 — depend on it explicitly. Bump all four revs in lock-step; the
# `delta-rs` and `delta-kernel-rs` revs must be a matched set.
delta_kernel = { package = "delta_kernel", git = "https://github.com/roeap/delta-kernel-rs", rev = "530e94d241779dfc17eda242f554b24091e00d23", features = [
  "internal-api",
  "default-engine-base",
  "arrow-58",
] }
delta_kernel_default_engine = { git = "https://github.com/roeap/delta-kernel-rs", rev = "530e94d241779dfc17eda242f554b24091e00d23", package = "delta_kernel_default_engine" }
deltalake-core = { git = "https://github.com/roeap/delta-rs", rev = "8b9181d5ebd3f0a30dfbe173d9fffb5cbb97ed8c", features = [
  "datafusion",
  "cloud",
] }

aes-gcm = { version = "0.10" }
async-trait = "0.1.83"
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["query"] }
bytes = { version = "1.1" }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = { version = "6" }
datafusion = { version = "54.0.0" }
env_logger = "0.11"
futures = "0.3.32"
itertools = { version = "0.14.0" }
napi = { version = "3.5", default-features = false, features = [
  "napi9",
  "async",
  "web_stream",
] }
napi-derive = "3.5"
object_store = { version = "0.13.2", features = ["azure", "aws", "gcp"] }
olai-http = { version = "0.0.5" }
olai-store = { version = "0.0.5" }
pbjson = { version = "0.9" }
pbjson-types = "0.9"
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
pyo3 = { version = "0.24", features = ["macros", "indexmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yml = { version = "0.0.12" }
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8.3" }
# Standalone SQL parser. DataFusion only re-exports this crate, so we depend on it
# directly for metric-view dependency extraction. Keep the version aligned with the
# one DataFusion (`datafusion` above) resolves so the AST types unify across crates.
sqlparser = { version = "0.61.0" }
thiserror = { version = "2" }
tokio = { version = "1.40" }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5", features = ["limit", "filter", "util"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
  "serde",
  "std",
], default-features = false }
uuid = { version = "1", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

[workspace.metadata.typos]
default.extend-ignore-re = [
  # Custom ignore regex patterns: https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
  "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
  # Line block with # spellchecker:<on|off>
  "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
]
files.extend-exclude = [
  "crates/common/src/models/_gen/**/*",
  "crates/sharing-client/src/models/_gen/**/*",
  "openapi/**/*",
  "node/client/unitycatalog/codegen/models/gen/**/*",
  "../trestle/crates/trestle-codegen/src/gen/**/*",
]

[workspace.metadata.typos.default.extend-words]
# to avoid having to name fields r#type
typ = "typ"
AKS = "AKS"
