[workspace]
resolver = "2"
members = ["crates/*", "python/client", "node/client", "examples/rust"]
# The wasm query engine (`crates/query-wasm`) stays its own workspace: its cdylib
# needs a size-tuned `[profile.release]` and wasm-only glue that shouldn't affect
# the native server build. But its async-native Delta TableProvider —
# `crates/olai-delta-df` — is a native-buildable library, so it lives HERE as a
# top-level member (picked up by `crates/*`); query-wasm consumes it via a
# cross-workspace `path = "../olai-delta-df"` dep. Both workspaces pin the same
# arrow fork (`[patch.crates-io]` below / in query-wasm) and the same kernel rev,
# so the crate resolves identically in each. `crates/query-wasm` is excluded so its
# own arrow patch + profile don't leak into the native graph.
exclude = ["crates/query-wasm"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/open-lakehouse/mangrove"
readme = "README.md"
# Floor set by the dependency tree: buoyant_kernel requires rustc 1.91
# (datafusion 53 / darling 0.23 need 1.88). Keep CI's toolchain pin >= this.
rust-version = "1.91"
# Crates are versioned independently in each crate's own `[package].version`
# (the release-plz convention), so there is intentionally no workspace-wide
# `version` here.
homepage = "https://unitycatalog.io"
keywords = [
  "unitycatalog",
  "deltalake",
  "lakehouse",
  "delta-sharing",
  "governance",
]

[workspace.dependencies]
# Kernel and delta-rs core share one git source so the `Snapshot` types unify when
# `crates/datafusion` builds a catalog-managed kernel snapshot and hands it to
# `deltalake-core::kernel::Snapshot::new`. All three are pinned here at the
# workspace level by immutable `rev` (never a floating branch): a moving branch
# drifts on any CI job that re-resolves instead of `--locked` (napi build,
# `cargo llvm-cov --doc`), which is exactly how the old `buoyant/main` pin broke.
#
# The native server and the wasm preview engine (`crates/query-wasm`, now a member
# of this same workspace) share ONE kernel fork: roeap `delta_kernel` v0.25.0. The
# default engine (`DefaultEngineBuilder`) moved into its own
# `delta_kernel_default_engine` crate in v0.25 — depend on it explicitly. Bump all
# four revs in lock-step; the `delta-rs` and `delta-kernel-rs` revs must be a
# matched set.
# The `version =` on these git deps is required for `release-plz`'s
# `cargo package` version-determination step: `cargo package` rejects any
# dependency (git-sourced included) that lacks a version requirement. The
# `git`+`rev` still governs the actual build; `version` only satisfies the
# packaging check and matches each fork's declared version. See release-plz#2595.
# Pinned to the delta-kernel-rs `sm-plans-consolidation` TIP (rev 1c1bf21b =
# 2cf01549 plus 5 additive, `sm-plans`-gated commits: the list-free snapshot
# construction seam, the SnapshotPm P&M state machine, the checkpoint-only
# reconciliation fix, the stats-on-terminal scan metadata SM, and the SSA
# data-skipping FilterNode on the scan terminal) and the
# matching delta-rs rev e6a80cbe (= the olai/sm-plans
# tip a686c3be plus one-line Cargo bumps of delta-rs's own kernel pin to
# 1c1bf21b). This is the rev the wasm query engine (`crates/query-wasm` +
# `delta-df-provider`) requires for its async-native sm_plans path, and it is
# now the WHOLE repo's rev — native + wasm share ONE kernel and ONE delta-rs rev
# (the single-rev invariant). The 5 extra commits are inside the `sm-plans`
# feature the native build never enables, so the native surface is unchanged.
# `default-features = false` +
# explicit `arrow-58` is REQUIRED: the kernel's `arrow` default alias is arrow-59
# and delta_kernel_default_engine's `default` enables it, so leaving defaults on
# unions arrow-59 into this arrow-58 graph and splits the two `Schema` types.
delta_kernel = { package = "delta_kernel", version = "0.25.0", git = "https://github.com/roeap/delta-kernel-rs", rev = "1c1bf21b4259b873c1c3cbcfdfe79d1da82ea023", default-features = false, features = [
  "internal-api",
  "default-engine-base",
  "arrow-58",
] }
delta_kernel_default_engine = { version = "0.25.0", git = "https://github.com/roeap/delta-kernel-rs", rev = "1c1bf21b4259b873c1c3cbcfdfe79d1da82ea023", package = "delta_kernel_default_engine", default-features = false, features = [
  "arrow-58",
  "rustls",
] }
deltalake-core = { version = "0.32.4", git = "https://github.com/roeap/delta-rs", rev = "e6a80cbe712586b6b50a165dfa8a1487859336df", features = [
  "datafusion",
  "cloud",
] }

aes-gcm = { version = "0.10" }
async-trait = "0.1.83"
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["query"] }
bytes = { version = "1.1" }
chrono = { version = "0.4.41", features = ["serde"] }
dashmap = { version = "6" }
datafusion = { version = "54.0.0" }
env_logger = "0.11"
futures = "0.3.32"
itertools = { version = "0.14.0" }
napi = { version = "3.5", default-features = false, features = [
  "napi9",
  "async",
  "web_stream",
] }
napi-derive = "3.5"
# buffa proto runtime consumed by the generated models (replaces the prost +
# prost-serde + tonic-prost model stack). Version tracks the
# `buf.build/anthropics/buffa:v0.7.0` plugin pinned in buf.gen.yaml. NOTE: the
# snake_case JSON wire-compat (see `json_field_names: proto` in trestle.yaml) is
# a trestle post-emit rewrite of buffa's `#[serde(rename = "camelCase", ...)]` /
# `serialize_entry("camelCase", ...)` output — a buffa release that changes that
# emission shape would silently reintroduce camelCase, so keep this version and
# the plugin version in lockstep and re-verify the wire fixtures on any bump.
buffa = { version = "0.7", features = ["json"] }
buffa-types = { version = "0.7" }
object_store = { version = "0.13.2", features = ["azure", "aws", "gcp"] }
olai-http = { version = "0.0.6" }
olai-store = { version = "0.0.6" }
pbjson = { version = "0.9" }
pbjson-types = "0.9"
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
pyo3 = { version = "0.28", features = ["macros", "indexmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yml = { version = "0.0.12" }
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8.3" }
# Standalone SQL parser. DataFusion only re-exports this crate, so we depend on it
# directly for metric-view dependency extraction. Keep the version aligned with the
# one DataFusion (`datafusion` above) resolves so the AST types unify across crates.
sqlparser = { version = "0.61.0" }
thiserror = { version = "2" }
tokio = { version = "1.40" }
tonic = { version = "0.14" }
tonic-prost = { version = "0.14" }
tower = { version = "0.5", features = ["limit", "filter", "util"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5.2", features = [
  "serde",
  "std",
], default-features = false }
uuid = { version = "1", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

[patch.crates-io]
# arrow family + parquet: the roeap arrow-rs fork (branch wasm-codec-58.3.0, rev
# dc2acae8). Same 58.3.0 version as crates.io. This is what lets the wasm query
# engine build for wasm32-unknown-unknown: the fork's parquet backs `zstd`
# per-target (the C `zstd` crate on native — full encode+decode — and pure-Rust
# `ruzstd` decode-only on wasm), and `brotli` is dropped from wasm. Native builds
# keep full C zstd, so this patch is native-safe. Applied workspace-wide (native +
# wasm now share one graph). MUST stay a patch, not feature flags: the kernel and
# datafusion-datasource-parquet declare `parquet` without `default-features =
# false`, and Cargo unions features graph-wide. Keep in lock-step with the pin in
# crates/query-wasm/Cargo.toml.
parquet = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "parquet" }
arrow = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow" }
arrow-arith = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-arith" }
arrow-array = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-array" }
arrow-buffer = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-buffer" }
arrow-cast = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-cast" }
arrow-data = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-data" }
arrow-ipc = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-ipc" }
arrow-json = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-json" }
arrow-ord = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-ord" }
arrow-row = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-row" }
arrow-schema = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-schema" }
arrow-select = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-select" }
arrow-string = { git = "https://github.com/roeap/arrow-rs", rev = "dc2acae85be7543f4a417b131554ef5c948e992b", package = "arrow-string" }

[workspace.metadata.typos]
default.extend-ignore-re = [
  # Custom ignore regex patterns: https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
  "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
  # Line block with # spellchecker:<on|off>
  "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
]
files.extend-exclude = [
  "crates/common/src/models/_gen/**/*",
  "crates/sharing-client/src/models/_gen/**/*",
  "openapi/**/*",
  "node/client/unitycatalog/codegen/models/gen/**/*",
  "../trestle/crates/trestle-codegen/src/gen/**/*",
]

[workspace.metadata.typos.default.extend-words]
# to avoid having to name fields r#type
typ = "typ"
AKS = "AKS"
