[package]
name = "unitycatalog-acceptance"
version = "0.0.1"
# Internal test harness — never published to crates.io.
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Acceptance testing framework for Unity Catalog"

[dependencies]
# repository dependencies
unitycatalog-client = { package = "olai-uc-client", path = "../client", version = "0.0.2" }
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.2" }

# workspace dependencies
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
olai-http = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# crates.io dependencies
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
