[package]
name = "unitycatalog-acceptance"
version = "0.0.1"
# Internal test harness — never published to crates.io.
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Acceptance testing framework for Unity Catalog"

[dependencies]
# repository dependencies
unitycatalog-client = { package = "olai-uc-client", path = "../client", version = "0.0.2" }
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.2" }
# Drives the managed-table Delta staging flow (createStagingTable -> commit ->
# loadTable) and builds a catalog-managed kernel snapshot for the read-back, so
# the managed_table_lifecycle check exercises the real /delta/v1 write+read path
# rather than a bare create_table. Delta feature pulls in deltalake-core.
unitycatalog-delta-api = { package = "olai-uc-delta-api", path = "../delta-api", version = "0.0.2" }
datafusion-unitycatalog = { package = "olai-uc-datafusion", path = "../datafusion", version = "0.1.0", features = [
  "delta",
] }

# workspace dependencies
chrono = { workspace = true, features = ["serde"] }
datafusion = { workspace = true }
deltalake-core = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
olai-http = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# crates.io dependencies
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
