[package]
name = "olai-uc-cli"
version = "0.0.1"
description = "Unity Catalog command-line client (the `uc` binary) for a running server."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "uc"
path = "src/main.rs"

[dependencies]
# path dependencies (in alphabetical order)
unitycatalog-client = { package = "olai-uc-client", path = "../client", version = "0.0.3" }
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.3", features = ["axum", "store"] }

# workspace dependencies (in alphabetical order)
# render model enum fields (EnumValue<E>) via buffa's Enumeration trait.
buffa = { workspace = true }
chrono = { workspace = true }
olai-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# crates.io dependencies (in alphabetical order)
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
console = "0.15"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
tui-tree-widget = "0.23"
