[package]
name = "olai-uc-client"
version = "0.0.2"
description = "Async Rust client for the Unity Catalog REST API."
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
# Stable Rust crate identifier, independent of the provisional package name.
name = "unitycatalog_client"

[dependencies]
unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.2" }
unitycatalog-delta-api = { package = "olai-uc-delta-api", path = "../delta-api", version = "0.0.2" }

olai-http = { workspace = true }
percent-encoding = "2.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

futures = { version = "0.3" }

[dev-dependencies]
rstest = "0.18"
mockito = "1.4"
http = "1"
bytes = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.1"
futures = "0.3"
url = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
env_logger = "0.10"
log = "0.4"
unitycatalog-acceptance = { path = "../acceptance" }
