[package]
# Published to crates.io under a provisional `olai-uc-*` name while the design
# settles; the in-workspace dependency key + crate identifier stay
# `unitycatalog(_)common` via each dependent's `package =` alias, so no source
# changes. See release-plz.toml / CONTRIBUTING.md.
name = "olai-uc-common"
version = "0.0.3"
description = "Shared types, generated Unity Catalog models, and storage/REST abstractions for the Unity Catalog server and client crates."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
# Keep the Rust crate identifier stable (`unitycatalog_common`) independent of
# the provisional `olai-uc-*` package name, so source `use` paths, sibling
# crates, and this crate's own tests/examples need no churn from the rename.
name = "unitycatalog_common"

[dependencies]
aes-gcm = { workspace = true }
async-trait = { workspace = true }
# buffa runtime consumed by the generated models (replaces the prost stack).
buffa = { workspace = true }
buffa-types = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
olai-http = { workspace = true, optional = true }
pbjson = { workspace = true }
percent-encoding = "2"
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# metric-view definition parsing (YAML model + sqlparser-based dependency extraction)
serde_yml = { workspace = true, optional = true }
sqlparser = { workspace = true, optional = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# rest server dependencies (in alphabetical order)
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
futures = { version = "0.3", optional = true }
# The ResourceStore backend layer (registry types, `Object`, `ResourceName`,
# `Label`/descriptors). Native-only; optional so the wire-DTO models compile on
# wasm without it. Pulled in by the `store` feature.
olai-store = { workspace = true, features = ["encryption"], optional = true }

# grpc server specific dependencies (in alphabetical order)
tonic = { workspace = true, optional = true }
# Codec used by the generated tonic service code (`tonic_prost::ProstCodec`).
tonic-prost = { workspace = true, optional = true }

# convenience for downstream crates that want to use certain types with sqlx
sqlx = { workspace = true, optional = true, features = [
  "uuid",
  "macros",
  "chrono",
  "json",
] }

# PyO3 boundary for generated models: trestle emits `Py*` wrapper `#[pyclass]`
# types in `models/_gen/pyo3_impls.rs` that convert to/from the buffa models. The
# conversion is emitted directly by the codegen now; the old `pythonize` bridge is
# gone (no source references anywhere).
pyo3 = { workspace = true, optional = true }

# derive #[napi] for generated enums (used by node/client)
napi-derive = { workspace = true, optional = true }

# integration test dependencies (in alphabetical order)
http = { version = "1.2", optional = true }
http-body-util = { version = "0.1.0", optional = true }
mime = { version = "0.3", optional = true }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = ["rest-client"]
grpc = ["tonic", "tonic-prost"]

# metric-view definition parsing: YAML model + sqlparser-based dependency extraction.
# Single source of truth shared by the server (derives view_dependencies on create)
# and the datafusion crate (re-exports for query-time lowering).
metric-view = ["dep:serde_yml", "dep:sqlparser"]

# enable support for the axum framework. This will implement `FromRequest`
# and `FromRequestParts` for request types.
axum = ["dep:axum", "dep:axum-extra", "http"]

sqlx = ["dep:sqlx", "store", "olai-store/sqlx"]

# storage abstraction trait (ResourceStore) implemented by backends
store = ["dep:futures", "dep:olai-store"]

# enable client implementation to interact with Unity REST APIs
rest-client = ["dep:futures", "olai-http"]

# exposes functionality that help testing cutom handler / router implementations.
integration = ["http-body-util", "mime", "axum"]

# PyO3 wrapper layer for generated messages (Py* types). Conversion is emitted by the trestle
# codegen directly now; the old `pythonize` bridge is no longer used (zero references), so it is
# not part of this feature.
python = ["pyo3"]

# derives #[napi] for generated enums (used by node/client)
node = ["napi-derive"]
