[package]
name = "olai-uc-datafusion"
version = "0.1.0"
description = "DataFusion catalog provider and Delta table integration backed by Unity Catalog."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
# Stable Rust crate identifier, independent of the provisional package name.
name = "datafusion_unitycatalog"

[dependencies]
async-trait = { workspace = true }
# buffa runtime: lowering UC model types into DataFusion plans reads buffa
# enum/message fields via buffa's accessors.
buffa = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
datafusion = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }

unitycatalog-common = { package = "olai-uc-common", path = "../common", version = "0.0.4" }
unitycatalog-delta-api = { package = "olai-uc-delta-api", path = "../delta-api", version = "0.0.4" }
unitycatalog-object-store = { package = "olai-uc-object-store", path = "../object-store", version = "0.0.4" }
unitycatalog-client = { package = "olai-uc-client", path = "../client", version = "0.0.4" }

deltalake-core = { workspace = true, optional = true }
# Build catalog-managed kernel snapshots (log tail + max catalog version) to hand
# to deltalake-core's `Snapshot::new`. Shares the workspace `delta_kernel` git
# source with `deltalake-core` so the `Snapshot` types unify.
delta_kernel = { workspace = true, optional = true }
# The default engine (`DefaultEngineBuilder`) moved out of `delta_kernel` into
# its own crate in kernel v0.25; the managed-table commit path builds one.
delta_kernel_default_engine = { workspace = true, optional = true }

# Serialize UC DDL responses into result batches (the `sql` module, `delta`
# feature) and deserialize metric-view YAML (`metric-view` feature).
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["delta", "metric-view"]
# Expose a Delta-backed `TableProviderBuilder` (pulls in delta-rs) and the Unity
# Catalog DDL statements + planner (the `sql` module), whose managed
# `CREATE TABLE` path serializes responses with serde/serde_json.
delta = ["dep:deltalake-core", "dep:delta_kernel", "dep:delta_kernel_default_engine", "dep:serde", "dep:serde_json"]
# Lower Unity Catalog metric-view YAML into a DataFusion `LogicalPlan`. The YAML
# model + dependency extraction live in `unitycatalog-common` (single source of
# truth); this crate re-exports them and adds the DataFusion lowering.
metric-view = ["unitycatalog-common/metric-view"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde_json = { workspace = true }
olai-http = { workspace = true }
# The log-explorer tests write synthetic Delta tables (adds, checkpoint,
# tombstoning overwrite) to drive the providers; delta-rs is the write side and
# the correctness oracle.
deltalake-core = { workspace = true }
tempfile = "3.1"

[[example]]
name = "unity_catalog"
required-features = ["delta"]

[[example]]
name = "managed_table_snapshot"
required-features = ["delta"]

[[example]]
name = "managed_table_write"
required-features = ["delta"]

[[example]]
name = "metric_view"
required-features = ["metric-view"]
